# grimlock

./: .gitignore  .gitmodules  CMakeLists.txt  start.bat
.claude/: settings.local.json
assets/: SoundBank.json
assets/shaders/: debug.frag  simple.frag  simple.vert  spritesheet.frag  spritesheet.vert
fmod/api/core/examples/: common_platform.cpp
fmod/api/core/examples/vs2017/: 3d.vcxproj  asyncio.vcxproj  channel_groups.vcxproj  convolution_reverb.vcxproj  dsp_custom.vcxproj  dsp_effect_per_speaker.vcxproj  dsp_inspector.vcxproj  effects.vcxproj  examples.sln  fmod_codec_raw.vcxproj  fmod_distance_filter.vcxproj  fmod_gain.vcxproj  fmod_noise.vcxproj  fmod_rnbo.vcxproj  gapless_playback.vcxproj  generate_tone.vcxproj  granular_synth.vcxproj  load_from_memory.vcxproj  multiple_speaker.vcxproj  net_stream.vcxproj  (+6 more)
fmod/api/studio/examples/: common_platform.cpp  common_platform.h
fmod/doc/: revision.txt
fmod/doc/FMOD API User Manual/: advanced-core-api-topics.html  core-api-channel.html  core-api-channelcontrol.html  core-api-channelgroup.html  core-api-common-dsp-effects.html  core-api-common.html  core-api-concepts.html  core-api-dsp.html  core-api-dspconnection.html  core-api-geometry.html  core-api-platform-android.html  core-api-platform-html5.html  core-api-platform-ios.html  core-api-reverb3d.html  core-api-sound.html  core-api-soundgroup.html  core-api-system.html  core-api.html  dsp-plugin-api-guide.html  effects-reference.html  fsbank-api.html  glossary.html  loading-and-playing-sounds-in-the-core-api.html  managing-resources-in-the-core-api.html  mixing-and-routing-in-the-core-api.html  platforms-android.html  platforms-html5.html  platforms-ios.html  platforms-linux.html  platforms-mac.html  platforms-openharmony.html  platforms-uwp.html  platforms-win.html  platforms.html  plugin-api-codec.html  plugin-api-dsp.html  plugin-api-output.html  plugin-api.html  running-the-core-api.html  spatializing-sounds-in-the-core-api.html  (+22 more)
fmod/plugins/fmod_haptics/inc/: fmod_haptics.h
shaders/: simple.frag
src/: Constants.h  Engine.cpp  Engine.h  main.cpp  stb.cpp  util.cpp  util.h
src/AI/: BehaviorComponent.h  MeleeBehavior.cpp  MeleeBehavior.h
src/Audio/: AudioManager.cpp  AudioManager.h  SoundBank.json
src/Events/: AudioEvent.cpp  AudioEvent.h  EventManager.cpp  EventManager.h  MovementEvent.cpp  MovementEvent.h
src/GameObject/: GameObject.cpp  GameObject.h  HealthComponent.cpp  HealthComponent.h  ShapeTypes.h  Transform.cpp  Transform.h
src/GameObject/Bullet/: BulletObject.cpp  BulletObject.h
src/GameObject/MeleeEnemy/: MeleeEnemy.cpp  MeleeEnemy.h
src/Graphics/: AnimatedSpriteComponent.cpp  AnimatedSpriteComponent.h  AnimationClip.h  DisplayTypes.h  EBO.cpp  EBO.h  GraphicsManager.cpp  GraphicsManager.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
src/Graphics/Camera/: Camera.cpp  Camera.h
src/Physics/: PhysicsComponent.cpp  PhysicsComponent.h  PhysicsManager.cpp  PhysicsManager.h
src/Physics/Collision/: Collision.cpp  Collision.h
src/Player/: CharacterController.cpp  CharacterController.h  PlayerObject.cpp  PlayerObject.h
src/Test/: CrashHandler.cpp  CrashHandler.h
stb/: CMakeLists.txt
(+35 files in other folders)
